plugins {
	id 'org.jetbrains.kotlin.jvm' version '1.9.25'
	id 'org.jetbrains.kotlin.plugin.spring' version '1.9.25'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'org.jetbrains.kotlin.plugin.jpa' version '1.9.25'
}

group = 'com.tk.learn'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springCloudAzureVersion', "5.16.0")
}


dependencies {
	implementation( enforcedPlatform("com.azure.spring:spring-cloud-azure-dependencies:${springCloudAzureVersion}"))
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.azure.spring:spring-cloud-azure-starter'
	implementation 'org.eclipse.store:afs-azure-storage:1.4.0'
	implementation 'com.azure.spring:spring-cloud-azure-starter-actuator'
	implementation 'com.azure.spring:spring-cloud-azure-starter-storage'
	implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
	implementation 'org.jetbrains.kotlin:kotlin-reflect'
	implementation 'software.xdev:spring-data-eclipse-store:2.1.0'
	runtimeOnly('com.h2database:h2')
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

kotlin {
	compilerOptions {
		freeCompilerArgs.addAll '-Xjsr305=strict'
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks{
	bootRun{
		jvmArgs = [
				"--add-opens=java.base/java.util=ALL-UNNAMED",
				"--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
				"--add-opens=java.base/java.lang=ALL-UNNAMED",
				"--add-opens=java.base/java.time=ALL-UNNAMED"
		]
	}
}